# GPT-Explainer-Project

./: .gitignore  GPT-explainer-1.md  README.md  requirements.txt
gpt_explainer/output/: everything-you-need-to-know-about-chatgpt-expeed-software.json
gpt_explainer/outputs/: Chapter_4_V7.01_20240704134840_ce36e13bffbf405ca904405db93c6443.json  Chapter_6_5-6_20240704134840_d9dde527d7b14d2da4dadc530203dda8.json
gpt_explainer/presentations/: everything-you-need-to-know-about-chatgpt-expeed-software.pptx
gpt_explainer/scripts/: async_requests.py  gpt_integration.py  main.py  pptx_text_extractor.py
gpt_explainer/tests/: sys_test.py
python_client/: README.md  pyproject.toml
python_client/client/: README.md  api_client.py
test/: sys_test.py
test/sample_presentation/: Chapter_4_V7.01.pptx
web_app/app/: __init__.py  config.py  main.py
web_app/app/api/: endpoints.py
web_app/shared_outputs/: Chapter_4_V7.01_20240706173109_c280839e5f444a79b11bd9f63d2fe3e5.json  Chapter_4_V7.01_20240706183647_6f1fa00675d34b48a77d4efde6e0ac74.json  Chapter_6_5-6_20240706173111_1f6be6c36aa9493e9acced27ca5bdb39.json  Chapter_6_5-6_20240706183649_f9d1ff6fd9994b01ab200d07fb2f353a.json
web_app/shared_uploads/: Chapter_6_5-6_20240706183649_f9d1ff6fd9994b01ab200d07fb2f353a.pptx
