[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-client-package"
version = "0.1.0"
description = "A Python client package for API interactions with the GPT expansion service."
authors = [
    { name="Yaniv Simmer", email="simmeryaniv@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests"
]

[tool.setuptools.packages.find]
where = ["."]
